--- a/simulation_study_for_lmm_threelevel.qmd
+++ b/simulation_study_for_lmm_threelevel.qmd
@@ -34,7 +34,7 @@ library(cmdstanr)
 register_knitr_engine(override = FALSE)
 library(posterior)
 library(bayesplot)
-color_scheme_set("blue")
+color_scheme_set("red")
 ```
 
 # Generate Data and Fitting by Stan
@@ -45,7 +45,7 @@ Check the file `run_sim_3l-lmm_ARdHdARmHm.R1`.
 # Check Results
 
 ```{r}
-model_name <- "sim_3l-lmm_ARdHdARmHm"
+model_name <- "sim_3l-lmm_ARdHdARmHm_N10D20M20Seed20250603"
 
 data <- read_rds(str_glue("data/{model_name}.rds"))
 names(data)
@@ -86,8 +86,9 @@ Following, I want to check the 95% HDI of the posterior distribution whether it 
 ```{r}
 order_s <- order(data$s)
 ppc_intervals(y = data$s[order_s], 
-              yrep = subset_draws(lmm_draws, variable = str_glue("s[{order_s}]"))) + 
-  scale_x_discrete(name = "Subject effect (s)") 
+              yrep = subset_draws(lmm_draws, variable = "s") %>% `[`(, order_s)) + 
+  scale_x_discrete(name = "Subject effect (s)") + 
+  gghighlight(y > 0)
 
 ```
 
@@ -96,9 +97,8 @@ ppc_intervals(y = data$s[order_s],
 order_d <- order(data$d)
 index_row <- (order_d-1) %% N + 1
 index_col <- (order_d-1) %/% N + 1
-
 ppc_intervals(y = data$d[order_d], 
-              yrep = subset_draws(lmm_draws, variable = str_glue("d[{index_row},{index_col}]"))) + 
+              yrep = subset_draws(lmm_draws, variable = "d") %>% `[`(, order_d)) +
   scale_x_discrete(name = "Day effect (d)")
 ```
 
@@ -117,7 +117,7 @@ pars_sd <- c("psi_s", "psi_d", "sigma_omega_d", "sigma_omega_m", "sigma_epsilon"
 ppc_intervals(y = data[pars_sd] |> unlist(), 
               yrep = subset_draws(lmm_draws, variable = pars_sd)) + 
   scale_x_discrete(name = "Standard deviations", 
-                   limits = c("psi_s", str_glue("psi_d[{j}]", j = 1:9), "sigma_omega_d", "sigma_omega_m", str_glue("sigma_epsilon[{k}]", k = 1:10)))
+                   limits = c("psi_s", str_glue("psi_d[{j}]", j = 1:D), "sigma_omega_d", "sigma_omega_m", str_glue("sigma_epsilon[{k}]", k = 1:M)))
 ```
 
 
@@ -130,18 +130,16 @@ ppc_intervals(y = data[pars_tau] |> unlist(),
 ```
 
 ```{r}
-attach(data)
-
-rel_T = (psi_s^2 + mean(psi_d^2)) / (psi_s^2 + mean(psi_d^2) + tau2_d + tau2_m + mean(sigma_epsilon^2))
-ppc_intervals(y = rel_T, 
+ppc_intervals(y = data$rel_T, 
               yrep = subset_draws(lmm_draws, variable = "rel_T")) + 
   scale_x_discrete(name = "R_T")
 ```
 
 
+# Fitting plot
+
 ```{r}
-data$y
-data_df <- expand.grid(Moment = 1:10, Day = 1:9, Subject = 1:100) |> 
+data_df <- expand.grid(Moment = 1:M, Day = 1:D, Subject = 1:N) |> 
   add_column(y = data$y)
 
 
@@ -149,23 +147,23 @@ data_df <- expand.grid(Moment = 1:10, Day = 1:9, Subject = 1:100) |>
 
 y_hat_summary_lmm <- .y_hat_summary_lmm |> 
   mutate(Indices = str_extract_all(variable, "\\d+"), 
-         Participant = map_dbl(Indices, \(x) as.integer(x[1])),
+         Subject = map_dbl(Indices, \(x) as.integer(x[1])),
          Day = map_dbl(Indices, \(x) as.integer(x[2])),
          Moment = map_dbl(Indices, \(x) as.integer(x[3])))
 
-data_predict_lmm <- data |> 
+data_predict_lmm <- data_df |> 
   left_join(y_hat_summary_lmm)
 
 data_predict_lmm |> 
-  filter(Participant %in% selected_subj) |> 
-  mutate(Date_time = as_datetime(days(Day) + Time)) |> 
-  ggplot(aes(x = Date_time, y = Neg_aff)) + 
+  # filter(Subject %in% selected_subj) |> 
+  mutate(Date_time = as_datetime(days(Day) + hours(Moment))) |> 
+  ggplot(aes(x = Date_time, y = y)) + 
   geom_line() + geom_point() +
-  geom_line(aes(y = mean), linetype = "dashed") +
-  geom_ribbon(aes(ymin = q5, ymax = q95), alpha = 0.25) +
-  coord_cartesian(ylim = c(-20, 100)) +
-  scale_x_datetime(breaks = as_datetime(1:9 * 86400),
-                   labels = paste("Day", 1:9)) +
-  facet_grid(Participant ~ .) 
+  geom_line(aes(y = mean), linetype = "dashed", color = "red") +
+  geom_ribbon(aes(ymin = q5, ymax = q95), alpha = 0.25, fill = "red") +
+  #coord_cartesian(ylim = c(-20, 100)) +
+  scale_x_datetime(breaks = as_datetime(1:D * 86400),
+                   labels = paste0("D", 1:D)) +
+  facet_grid(Subject ~ .) 
 
 ```
